# minigrep

./: Cargo.toml  output.txt
src/: lib.rs  main.rs
