[package]
name = "minigrep_yuma"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple command cli for searching string query from file"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
[profile.release]
opt-level = 3

[dependencies]
